runtime env variables

--- a/03_OCP_Frontend/src/index.html
+++ b/03_OCP_Frontend/src/index.html
@@ -29,6 +29,7 @@
   <!-- Customized Bootstrap Stylesheet -->
 
   <base href="/">
+  <script src="assets/env.js"></script>
 </head>
 
 <body class="mat-typography">
